2010-12-03  Ingo Weinzierl <ingo@intevation.de>

	* auik.properties: Entfernt. Diese Datei ändert sich ggf bei jeder Nutzung
	  des Programms und gehört daher nicht in die Versionsverwaltung.

	* *.java: Code bereinigt. Tabs durch vier Leerzeichen ersetzt und Trailing
	  Spaces entfernt. Folgende sed Aufrufe per Console verwendet:

	    sed -i -e 's/\t/    /g' `find -name \*.java`
	    sed -i -e 's/[ ]*$// `find -name \*.java`

2010-12-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/HibernateSessionFactory.java: Der Name der
	  Konfigurationsdatei, die von Hibernate genutzt wird, wird aus einer System
	  Property 'auik.hibernate.config' gelesen. Falls keine solche System
	  Property existiert, wird 'hibernate.cfg.xml' als standard Dateiname
	  genutzt.
	
	* build.xml: Beim Starten der Anwendung wird eine System Property
	  hinzugefügt, die auf die zu nutzende Konfigurationsdatei für Hibernate
	  verweist (siehe oben). Der standard Wert dieser System Property ist
	  'hibernate.cfg.xml'. Um eine andere Hibernate Konfiguration zu verwenden,
	  kann diese Property verändert, oder mit folgendem Aufruf für den nächsten
	  Start angepasst werden:
	
	    ant run -Dauik.hibernate.config=YourConfig.cfg.xml

2010-12-02  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Neu. Diese Ant Konfiguration hat derzeit 5 Optionen:
	  1) initdb: Initialisiert die Datenbank mittels Hibernate.
	  2) compile: Compiliert die Quellen und kopiert die übersetzten Klassen
	              plus benötigte Icons und Konfigurationen nach 'build'.
	  3) dist:    Erstellt ein Jar-Archiv aus den übersetzten Quellen, Icons und
	              Konfigurationen und kopiert dieses nach 'dist'.
	  4) run:     Übersetzt die Quellen, erstellt und Jar-Archiv und startet die
	              Anwendung (mit Splash-Screen).
	  5) clean:   Entfernt die Ordner 'build' und 'dist'.

	Hinweis: das Projekt wurde mittels cvs2svn von CVS in ein SVN Repository