@@ -1,5 +1,10 @@
 2010-12-03  Ingo Weinzierl <ingo@intevation.de>
 
+	* build.xml: Neue Option 'javadoc'. Der Aufruf `ant javadoc` generiert nun
+	  eine HTML Ausgabe der JavaDoc im Verzeichnis `doc`.
+
+2010-12-03  Ingo Weinzierl <ingo@intevation.de>
+
 	* auik.properties: Entfernt. Diese Datei ändert sich ggf bei jeder Nutzung
 	  des Programms und gehört daher nicht in die Versionsverwaltung.
 
